--- a/index.html
+++ b/index.html
@@ -252,28 +252,43 @@
                 <div class="footer-section">
                     <h4>Grammar Master</h4>
                     <p>Your comprehensive resource for English Grammar practice</p>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="#" onclick="openFeedbackModal()">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Practice Sections</h4>
+                    <ul>
+                        <li><a href="#parts-of-speech">Parts of Speech</a></li>
+                        <li><a href="#tenses">Tenses</a></li>
+                        <li><a href="#narration">Direct/Indirect Speech</a></li>
+                        <li><a href="#usage">Usage & Forms</a></li>
+                    </ul>
                 </div>
                 <div class="footer-section">
                     <h4>Features</h4>
                     <ul>
-                        <li>2000+ MCQs</li>
-                        <li>Detailed Explanations</li>
-                        <li>Multiple Difficulty Levels</li>
-                        <li>No Download Required</li>
+                        <li>✓ 2000+ MCQs</li>
+                        <li>✓ Detailed Explanations</li>
+                        <li>✓ Multiple Difficulty Levels</li>
+                        <li>✓ Mobile Responsive</li>
+                        <li>✓ No Download Required</li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Topics Covered</h4>
+                    <h4>Connect With Us</h4>
                     <ul>
-                        <li>Parts of Speech</li>
-                        <li>Tenses</li>
-                        <li>Direct/Indirect Speech</li>
-                        <li>Usage & Forms</li>
+                        <li><a href="#" onclick="openFeedbackModal()">📱 WhatsApp Feedback</a></li>
+                        <li><a href="mailto:support@grammarmaster.com">📧 Email Support</a></li>
+                        <li><a href="#home">🏠 Back to Top</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Grammar Master. All rights reserved. | Online Grammar Practice Platform</p>
+                <p>&copy; 2025 Grammar Master. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="about.html">About</a> | <a href="#" onclick="openFeedbackModal()">Contact</a></p>
             </div>
         </div>
     </footer>
