--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#narration" class="nav-link">Direct/Indirect</a></li>
                     <li><a href="#usage" class="nav-link">Usage</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="#" class="nav-link" id="feedback-btn">Feedback</a></li>
+                    <li><a href="#" class="nav-link" id="feedback-btn" onclick="openFeedbackModal()">Feedback</a></li>
                 </ul>
                 <div class="hamburger">
                     <span></span>
