--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     </div>
                     <div class="form-actions">
                         <button type="button" class="btn-secondary" id="cancel-feedback">Cancel</button>
-                        <button type="submit" class="btn-primary">
+                        <button type="submit" class="btn-primary" id="send-feedback-btn">
                             <i class="fab fa-whatsapp"></i> Send to WhatsApp
                         </button>
                     </div>
