--- a/index.html
+++ b/index.html
@@ -144,30 +144,30 @@
 
                     <div class="question-card">
                         <div class="question-number">Question 1</div>
-                        <div class="question-text" id="question-text">
+                        <div class="question-text">
                             Identify the part of speech of "nevertheless" in the sentence: "He was tired; nevertheless, he kept working."
                         </div>
-                        <div class="options" id="options">
-                            <div class="option" data-option="A">
+                        <div class="options">
+                            <div class="option" data-option="0">
                                 <span class="option-letter">A</span>
                                 <span class="option-text">Adjective</span>
                             </div>
-                            <div class="option" data-option="B">
+                            <div class="option" data-option="1">
                                 <span class="option-letter">B</span>
                                 <span class="option-text">Conjunction</span>
                             </div>
-                            <div class="option" data-option="C">
+                            <div class="option" data-option="2">
                                 <span class="option-letter">C</span>
                                 <span class="option-text">Adverb</span>
                             </div>
-                            <div class="option" data-option="D">
+                            <div class="option" data-option="3">
                                 <span class="option-letter">D</span>
                                 <span class="option-text">Preposition</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="answer-section" id="answer-section" style="display: none;">
+                    <div class="answer-section" style="display: none;">
                         <div class="correct-answer">
                             <strong>Correct Answer: C) Adverb</strong>
                         </div>
@@ -177,9 +177,9 @@
                     </div>
 
                     <div class="quiz-controls">
-                        <button class="btn btn-secondary" id="prev-btn" disabled>Previous</button>
-                        <button class="btn btn-primary" id="submit-btn">Submit Answer</button>
-                        <button class="btn btn-primary" id="next-btn" style="display: none;">Next Question</button>
+                        <button class="btn btn-secondary prev-btn" disabled>Previous</button>
+                        <button class="btn btn-primary submit-btn">Submit Answer</button>
+                        <button class="btn btn-primary next-btn" style="display: none;">Next Question</button>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,52 @@
                 </div>
 
                 <div class="quiz-container">
-                    <!-- Quiz content will be loaded here -->
+                    <div class="quiz-header">
+                        <div class="question-counter">
+                            <span class="current-question">1</span> / <span class="total-questions">167</span>
+                        </div>
+                        <div class="difficulty-badge easy">Easy</div>
+                    </div>
+
+                    <div class="question-card">
+                        <div class="question-number">Question 1</div>
+                        <div class="question-text">
+                            Loading question...
+                        </div>
+                        <div class="options">
+                            <div class="option" data-option="0">
+                                <span class="option-letter">A</span>
+                                <span class="option-text">Option A</span>
+                            </div>
+                            <div class="option" data-option="1">
+                                <span class="option-letter">B</span>
+                                <span class="option-text">Option B</span>
+                            </div>
+                            <div class="option" data-option="2">
+                                <span class="option-letter">C</span>
+                                <span class="option-text">Option C</span>
+                            </div>
+                            <div class="option" data-option="3">
+                                <span class="option-letter">D</span>
+                                <span class="option-text">Option D</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="answer-section" style="display: none;">
+                        <div class="correct-answer">
+                            <strong>Correct Answer: </strong>
+                        </div>
+                        <div class="explanation">
+                            <strong>Explanation:</strong>
+                        </div>
+                    </div>
+
+                    <div class="quiz-controls">
+                        <button class="btn btn-secondary prev-btn" disabled>Previous</button>
+                        <button class="btn btn-primary submit-btn">Submit Answer</button>
+                        <button class="btn btn-primary next-btn" style="display: none;">Next Question</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -220,7 +265,52 @@
                 </div>
 
                 <div class="quiz-container">
-                    <!-- Quiz content will be loaded here -->
+                    <div class="quiz-header">
+                        <div class="question-counter">
+                            <span class="current-question">1</span> / <span class="total-questions">167</span>
+                        </div>
+                        <div class="difficulty-badge easy">Easy</div>
+                    </div>
+
+                    <div class="question-card">
+                        <div class="question-number">Question 1</div>
+                        <div class="question-text">
+                            Loading question...
+                        </div>
+                        <div class="options">
+                            <div class="option" data-option="0">
+                                <span class="option-letter">A</span>
+                                <span class="option-text">Option A</span>
+                            </div>
+                            <div class="option" data-option="1">
+                                <span class="option-letter">B</span>
+                                <span class="option-text">Option B</span>
+                            </div>
+                            <div class="option" data-option="2">
+                                <span class="option-letter">C</span>
+                                <span class="option-text">Option C</span>
+                            </div>
+                            <div class="option" data-option="3">
+                                <span class="option-letter">D</span>
+                                <span class="option-text">Option D</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="answer-section" style="display: none;">
+                        <div class="correct-answer">
+                            <strong>Correct Answer: </strong>
+                        </div>
+                        <div class="explanation">
+                            <strong>Explanation:</strong>
+                        </div>
+                    </div>
+
+                    <div class="quiz-controls">
+                        <button class="btn btn-secondary prev-btn" disabled>Previous</button>
+                        <button class="btn btn-primary submit-btn">Submit Answer</button>
+                        <button class="btn btn-primary next-btn" style="display: none;">Next Question</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -240,7 +330,52 @@
                 </div>
 
                 <div class="quiz-container">
-                    <!-- Quiz content will be loaded here -->
+                    <div class="quiz-header">
+                        <div class="question-counter">
+                            <span class="current-question">1</span> / <span class="total-questions">167</span>
+                        </div>
+                        <div class="difficulty-badge easy">Easy</div>
+                    </div>
+
+                    <div class="question-card">
+                        <div class="question-number">Question 1</div>
+                        <div class="question-text">
+                            Loading question...
+                        </div>
+                        <div class="options">
+                            <div class="option" data-option="0">
+                                <span class="option-letter">A</span>
+                                <span class="option-text">Option A</span>
+                            </div>
+                            <div class="option" data-option="1">
+                                <span class="option-letter">B</span>
+                                <span class="option-text">Option B</span>
+                            </div>
+                            <div class="option" data-option="2">
+                                <span class="option-letter">C</span>
+                                <span class="option-text">Option C</span>
+                            </div>
+                            <div class="option" data-option="3">
+                                <span class="option-letter">D</span>
+                                <span class="option-text">Option D</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="answer-section" style="display: none;">
+                        <div class="correct-answer">
+                            <strong>Correct Answer: </strong>
+                        </div>
+                        <div class="explanation">
+                            <strong>Explanation:</strong>
+                        </div>
+                    </div>
+
+                    <div class="quiz-controls">
+                        <button class="btn btn-secondary prev-btn" disabled>Previous</button>
+                        <button class="btn btn-primary submit-btn">Submit Answer</button>
+                        <button class="btn btn-primary next-btn" style="display: none;">Next Question</button>
+                    </div>
                 </div>
             </div>
         </section>
