--- a/index.html
+++ b/index.html
@@ -437,18 +437,40 @@
             </div>
             <div class="modal-body">
                 <p>We'd love to hear your feedback! Your message will be sent directly to our WhatsApp.</p>
+                <div class="security-notice">
+                    <i class="fas fa-shield-alt"></i>
+                    <small>🔒 Secure form with spam protection and validation</small>
+                </div>
                 <form id="feedback-form">
                     <div class="form-group">
-                        <label for="user-name">Your Name *</label>
-                        <input type="text" id="user-name" name="userName" required placeholder="Enter your full name">
+                        <label for="user-name">Your Name * <small>(2-50 characters)</small></label>
+                        <input type="text" id="user-name" name="userName" required 
+                               placeholder="Enter your full name" 
+                               minlength="2" maxlength="50">
                     </div>
                     <div class="form-group">
-                        <label for="user-whatsapp">Your WhatsApp Number *</label>
-                        <input type="tel" id="user-whatsapp" name="userWhatsapp" required placeholder="+92 300 1234567">
+                        <label for="user-whatsapp">Your WhatsApp Number * <small>(with country code)</small></label>
+                        <input type="tel" id="user-whatsapp" name="userWhatsapp" required 
+                               placeholder="+92 300 1234567"
+                               pattern="^\+[1-9]\d{9,14}$"
+                               title="Please enter a valid WhatsApp number with country code (e.g., +92 300 1234567)">
+                        <small class="help-text">
+                            <i class="fas fa-info-circle"></i>
+                            Examples: +92 300 1234567 (Pakistan), +91 98765 43210 (India)
+                        </small>
                     </div>
                     <div class="form-group">
-                        <label for="feedback-message">Your Feedback *</label>
-                        <textarea id="feedback-message" name="feedbackMessage" required rows="5" placeholder="Share your thoughts, suggestions, or report any issues..."></textarea>
+                        <label for="feedback-message">Your Feedback * <small>(10-500 characters)</small></label>
+                        <textarea id="feedback-message" name="feedbackMessage" required rows="5" 
+                                  placeholder="Share your thoughts, suggestions, or report any issues..."
+                                  minlength="10" maxlength="500"></textarea>
+                        <div class="char-counter">
+                            <span id="char-count">0</span>/500 characters
+                        </div>
+                    </div>
+                    <div class="security-info">
+                        <i class="fas fa-lock"></i>
+                        <small>Security verification will be required before sending</small>
                     </div>
                     <div class="form-actions">
                         <button type="button" class="btn-secondary" id="cancel-feedback">Cancel</button>
