--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <h4>Grammar Master</h4>
                     <p>Your comprehensive resource for English Grammar practice</p>
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="#" onclick="openFeedbackModal()">Contact</a></li>
@@ -510,10 +510,10 @@
                 <div class="footer-section">
                     <h4>Practice Sections</h4>
                     <ul>
-                        <li><a href="#parts-of-speech">Parts of Speech</a></li>
-                        <li><a href="#tenses">Tenses</a></li>
-                        <li><a href="#narration">Direct/Indirect Speech</a></li>
-                        <li><a href="#usage">Usage & Forms</a></li>
+                        <li><a href="#parts-of-speech" onclick="navigateToSection('parts-of-speech')">Parts of Speech</a></li>
+                        <li><a href="#tenses" onclick="navigateToSection('tenses')">Tenses</a></li>
+                        <li><a href="#narration" onclick="navigateToSection('narration')">Direct/Indirect Speech</a></li>
+                        <li><a href="#usage" onclick="navigateToSection('usage')">Usage & Forms</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -531,7 +531,7 @@
                     <ul>
                         <li><a href="#" onclick="openFeedbackModal()">📱 WhatsApp Feedback</a></li>
                         <li><a href="mailto:support@grammarmaster.com">📧 Email Support</a></li>
-                        <li><a href="#home">🏠 Back to Top</a></li>
+                        <li><a href="#" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">🏠 Back to Top</a></li>
                     </ul>
                 </div>
             </div>
