--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <meta name="description" content="Master English grammar with 2000+ interactive MCQs. Practice parts of speech, tenses, narration, and usage. Free online grammar tests with instant feedback and explanations.">
     <meta name="keywords" content="english grammar mcqs, grammar practice questions, parts of speech quiz, tenses mcqs, direct indirect speech, grammar test online, english grammar exercises">
     <meta name="author" content="Grammar Master">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="index, follow">
+    <meta name="google-site-verification" content="a453d648b8065117">
     <link rel="canonical" href="https://alicomputer76w.github.io/Grammer_Website/">
+    
+    <!-- Additional SEO Meta Tags -->
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+    <meta name="theme-color" content="#4f46e5">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -43,31 +53,44 @@
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "EducationalOrganization",
+        "@type": "WebSite",
         "name": "Grammar Master",
         "description": "Free online English grammar practice with 2000+ MCQs covering parts of speech, tenses, narration, and usage",
-        "url": "https://grammarmaster.com",
-        "logo": "https://grammarmaster.com/images/logo.png",
-        "sameAs": [
-            "https://facebook.com/grammarmaster",
-            "https://twitter.com/grammarmaster"
-        ],
-        "offers": {
-            "@type": "Offer",
-            "price": "0",
-            "priceCurrency": "USD",
-            "availability": "https://schema.org/InStock",
-            "description": "Free English Grammar MCQs Practice"
+        "url": "https://alicomputer76w.github.io/Grammer_Website/",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://alicomputer76w.github.io/Grammer_Website/?q={search_term_string}",
+            "query-input": "required name=search_term_string"
         },
-        "educationalCredentialAwarded": "Grammar Proficiency Certificate",
-        "hasOfferCatalog": {
-            "@type": "OfferCatalog",
-            "name": "Grammar Practice Categories",
-            "itemListElement": [
-                {
-                    "@type": "Course",
-                    "name": "Parts of Speech MCQs",
-                    "description": "500+ questions on nouns, verbs, adjectives, adverbs, and more",
+        "publisher": {
+            "@type": "Organization",
+            "name": "Grammar Master",
+            "url": "https://alicomputer76w.github.io/Grammer_Website/"
+        },
+        "mainEntity": {
+            "@type": "EducationalOrganization",
+            "name": "Grammar Master",
+            "description": "Free online English grammar practice with 2000+ MCQs covering parts of speech, tenses, narration, and usage",
+            "url": "https://alicomputer76w.github.io/Grammer_Website/",
+            "sameAs": [
+                "https://alicomputer76w.github.io/Grammer_Website/blog.html",
+                "https://alicomputer76w.github.io/Grammer_Website/about.html"
+            ],
+            "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "USD",
+                "availability": "https://schema.org/InStock",
+                "description": "Free English Grammar MCQs Practice"
+            },
+            "hasOfferCatalog": {
+                "@type": "OfferCatalog",
+                "name": "Grammar Practice Categories",
+                "itemListElement": [
+                    {
+                        "@type": "Course",
+                        "name": "Parts of Speech MCQs",
+                        "description": "500+ questions on nouns, verbs, adjectives, adverbs, and more",
                     "provider": {
                         "@type": "Organization",
                         "name": "Grammar Master"
