--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow">
-    <meta name="google-site-verification" content="a453d648b8065117">
+    <meta name="google-site-verification" content="MSgwuL3M3YAma8EzyeEBII8W0Aiv49lXUZSxPpooiWo" />
     <link rel="canonical" href="https://alicomputer76w.github.io/Grammer_Website/">
     
     <!-- Additional SEO Meta Tags -->
@@ -640,4 +640,5 @@
         });
     </script>
 </body>
+
 </html>
